migrator-tests/tests/snapshots/init__assert_migration_files_presence_and_format-10.snap
---
source: migrator-tests/tests/init.rs
expression: content
---
REMOVE TABLE animal;
REMOVE TABLE crop;
REMOVE TABLE eats;
REMOVE TABLE migration;
REMOVE TABLE planet;
REMOVE TABLE student;
